// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryList Snapshot Should render and empty list 1`] = `
<div
  className="header"
>
  <h1>
    Categories
  </h1>
  <a
    href="/"
    onClick={[Function]}
  >
    <svg
      className="add"
      height="50"
      onClick={[Function]}
      viewBox="0 0 52 52"
      width="50"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M26 0C11.664 0 0 11.663 0 26s11.664 26 26 26 26-11.663 26-26S40.336 0 26 0zm0 50C12.767 50 2 39.233 2 26S12.767 2 26 2s24 10.767 24 24-10.767 24-24 24z"
      />
      <path
        d="M38.5 25H27V14c0-.553-.448-1-1-1s-1 .447-1 1v11H13.5c-.552 0-1 .447-1 1s.448 1 1 1H25v12c0 .553.448 1 1 1s1-.447 1-1V27h11.5c.552 0 1-.447 1-1s-.448-1-1-1z"
      />
    </svg>
  </a>
</div>
`;

exports[`CategoryList Snapshot Should render the list correctly 1`] = `
Array [
  <div
    className="header"
  >
    <h1>
      Categories
    </h1>
    <a
      href="/"
      onClick={[Function]}
    >
      <svg
        className="add"
        height="50"
        onClick={[Function]}
        viewBox="0 0 52 52"
        width="50"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M26 0C11.664 0 0 11.663 0 26s11.664 26 26 26 26-11.663 26-26S40.336 0 26 0zm0 50C12.767 50 2 39.233 2 26S12.767 2 26 2s24 10.767 24 24-10.767 24-24 24z"
        />
        <path
          d="M38.5 25H27V14c0-.553-.448-1-1-1s-1 .447-1 1v11H13.5c-.552 0-1 .447-1 1s.448 1 1 1H25v12c0 .553.448 1 1 1s1-.447 1-1V27h11.5c.552 0 1-.447 1-1s-.448-1-1-1z"
        />
      </svg>
    </a>
  </div>,
  <ul
    className="category-list"
  >
    <li
      onClick={[Function]}
    >
      <a
        href="/?name=cars"
        onClick={[Function]}
      >
        <div
          className="category"
        >
          <strong>
            cars
          </strong>
          <small>
            audi, ferrari, bmw
          </small>
        </div>
      </a>
    </li>
    <li
      onClick={[Function]}
    >
      <a
        href="/?name=music"
        onClick={[Function]}
      >
        <div
          className="category"
        >
          <strong>
            music
          </strong>
          <small>
            guitar, drums, bass
          </small>
        </div>
      </a>
    </li>
  </ul>,
]
`;
